--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container>
+<mat-sidenav-container style="background-color: transparent !important;">
   <mat-sidenav
     #drawer
     class="sidenav"
@@ -10,7 +10,7 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a
+        <a
         class="col px-md-3"
         routerLink="/account"
         routerLinkActive="active"
@@ -53,7 +53,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar>
       <button
         type="button"
         aria-label="Toggle sidenav"
@@ -63,11 +63,16 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span class="px-md-5">Waled</span>
+      <img
+        src="..\..\assets\W LOGO.png"
+        routerLink="/"
+        routerLinkActive="active"
+      />
       <div
         [ngClass]="{ hidden: (isHandset$ | async) === true }"
         class="row buttons"
       >
+      
         <a
           class="col px-md-3"
           routerLink="/account"
