--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,12 +1,15 @@
-<app-header></app-header>
-<body>
-  <img class="landing" src="assets/background-picture.png" />
-  <h1>Tu dinero seguro y en un mismo lugar</h1>
-  <div class="cards">
-    <img class="card" src="assets/card_1.png" />
-    <img class="card" src="assets/card_2.png" />
-    <img class="card" src="assets/card_3.png" />
-    <img class="card" src="assets/card_4.png" />
+<div class="landing background_image">
+  <app-header></app-header>
+  <div class="title">  
+    <h1>Tu dinero seguro</h1>
+    <br/>
+    <h2>y en un mismo lugar</h2>
+    </div>
+  <div class="center cards">
+      <img class="card" src="assets/card_1.png" />
+      <img class="rest_of_cards card" src="assets/card_2.png" />
+      <img class="rest_of_cards card" src="assets/card_3.png" />
+      <img class="rest_of_cards card" src="assets/card_4.png" />
   </div>
-</body>
+</div>
 <app-footer></app-footer>
