--- a/src/app/left-nav-bar/left-nav-bar.component.html
+++ b/src/app/left-nav-bar/left-nav-bar.component.html
@@ -51,7 +51,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar style="background-color: #00b3a6">
       <button
         type="button"
         aria-label="Toggle sidenav"
@@ -61,7 +61,7 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span class="px-md-5">Waled</span>
+      <img src="..\..\assets\WALED LOGO.png" class="responsive_logo" routerLink="/" routerLinkActive="active">
     </mat-toolbar>
   </mat-sidenav-content>
 </mat-sidenav-container>
