--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -1,35 +1,36 @@
-body {
+.center {
   display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .landing {
   width: 100%;
   height: 100%;
-  filter: brightness(50%);
 }
 
-.line {
-  position: absolute;
-  width: 585px;
-  height: 0px;
-  left: 0px;
-  border: 5px solid white;
+.background_image {
+  position: relative;
+  background-image: url(../../assets/background-picture.png);
 }
 
-h1 {
-  margin-bottom: 300px !important;
-  position: absolute;
-  font-style: normal;
+.title,
+h1,
+h2 {
   color: white;
   font-weight: bold;
   text-transform: uppercase;
+  position: relative;
+  font-style: normal;
+  padding-left: 5%;
+}
+h1 {
+  padding-top: 7%;
 }
 
 .cards {
   width: 70%;
-  padding-top: 15%;
+  align-items: center;
+  justify-content: center;
+  padding-top: 6%;
   left: 12%; /*centré un poco las cards, pero luego hay que ajustarlo bien calculo.*/
   display: flex;
   position: absolute;
@@ -42,17 +43,25 @@ h1 {
 
 @media only screen and (max-width: 1040px) {
   .landing {
-    display: none;
+    background-color: rgb(139, 139, 167);
+    background-image: none;
+    background-size: cover;
+    position: relative;
+    height: 250% !important;
   }
+  h1, h2 {
+    margin-top: 5%;
+    font-size: 29px;
+    color: #000;  
+  }
+  .center, .card{
+    display: block !important; 
+    width: 83%;
+    padding: 3%;
+    margin-top: 10%;
 
-  .line {
-    display: none;
   }
-  h1 {
-    font-size: 15px;
-    color: #000;
-  }
-  .cards {
-    display: none;
+  .rest_of_cards{
+    margin-top: 25%;
   }
 }
