--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -3,12 +3,14 @@ body {
   height: 100%;
 }
 
+.center{
+  background: linear-gradient(180deg, #00b3a6 50%, #f3f3f3 50%);
+}
 .global-container {
   height: calc(100% - 58px);
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(180deg, #c4c4c4 50%, #f3f3f3 50%);
   font-family: "Roboto";
   font-size: 16px;
   position: relative;
