Arreglé las relaciones de color de fondo y header transparente

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -37,7 +37,7 @@ body {
   max-width: 650px;
 }
 .background {
-  background-color: rgb(240, 240, 240);
+  background-color: #94c5c1;
 
 }
 .content, h1, h1 {
