--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -11,7 +11,7 @@
               type="text"
               name="name"
               id="name"
-              placeholder="Name *"
+              placeholder="Nombre *"
               required=""
             />
           </div>
@@ -21,7 +21,7 @@
               type="text"
               name="subject"
               id="subject"
-              placeholder="Subject *"
+              placeholder="Asunto *"
               required=""
             />
           </div>
@@ -31,7 +31,7 @@
               type="email"
               name="email"
               id="email"
-              placeholder="Email *"
+              placeholder="Correo *"
               required=""
             />
           </div>
@@ -40,7 +40,7 @@
               class="boxShadow"
               id="message"
               name="message"
-              placeholder="Message *"
+              placeholder="Mensaje *"
               required=""
             ></textarea>
             <label id="counter"></label>
