--- a/src/app/faq/faq.component.css
+++ b/src/app/faq/faq.component.css
@@ -1,24 +1,23 @@
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-.accordion-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
- background-color: royalblue;
- justify-content: center;
- font-family: sans-serif;
- font-weight: bold;
- text-transform: uppercase;
- 
+main {
+  background-color: #94c5c1;
+}
+.accordion-button {
+  background-color: royalblue;
+  justify-content: center;
+  font-family: sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .tittle {
-
   padding-bottom: 15px;
   padding-top: 15px;
   font-family: sans-serif;
   font-weight: bold;
-
 }
