--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -10,6 +10,7 @@
 .background_image {
   position: relative;
   background-image: url(../../assets/background-picture.png);
+  background-size: cover;
 }
 
 .title,
