--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -67,6 +67,7 @@
         src="..\..\assets\W LOGO.png"
         routerLink="/"
         routerLinkActive="active"
+        class="Logo"
       />
       <div
         [ngClass]="{ hidden: (isHandset$ | async) === true }"
