--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -8,6 +8,7 @@
   height: 80%;
   margin-right: 10%;
   filter: drop-shadow(2px 2px 0.05rem rgb(186, 34, 206));
+  cursor: pointer;
 }
 
 .sidenav .mat-toolbar {
